--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "@randlabs/myalgo-connect": "^1.1.2",
     "algosdk": "^1.13.0",
     "crypto-browserify": "^3.12.0",
     "stream-browserify": "^3.0.0"
