--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "quicksig_server",
   "version": "0.0.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
